Bug 1060526 - Call DestroyWindow() in TabChild::ActorDestroy(). r=smaug